fix mobile login input overflow

--- a/src/pages/Login.css
+++ b/src/pages/Login.css
@@ -36,10 +36,11 @@
 
 @media screen and (max-width: 768px) {
   .login-container{
+    gap: 10px;
     width: 80%;
   }
   .login-input{
-    width: 120%;
+    width: 80%;
     padding: 20px;
     font-size: 15px;
   }
